[tool.poetry]
name = "code-navigator"
version = "0.1.0"
description = ""
authors = ["Varun Nayak <varunnayak3101@gmail.com>"]
readme = "README.md"
packages = [{include = "code_navigator"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
llama-index = "^0.10.6"
transformers = "^4.37.2"
gradio = "^4.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
